--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,7 +5,7 @@
 
 .book-list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat((300px, 1fr));
   grid-gap: 20px;
   padding: 20px;
 }
